# avarra-edu-bot

./: .gitignore  Dockerfile  README.md  config.example.yaml  debug_apply.py  docker-compose.yml  find_convid.py  pyproject.toml  test_apply_live.py  test_force_telegram.py
deploy/: navarra-edu-bot.plist.template
navarra_edu_bot/: __main__.py  cli.py  logging_config.py  orchestrator.py
navarra_edu_bot/config/: keychain.py  loader.py  schema.py
navarra_edu_bot/diagnostics/: backup.py  canary.py  healthcheck.py  snapshot.py
navarra_edu_bot/filter/: eligibility.py  ranker.py
navarra_edu_bot/scheduler/: fast_path_worker.py  ntp_sync.py  run_state.py  thursday_queue.py
navarra_edu_bot/scraper/: apply.py  browser.py  fetch.py  http_session.py  login.py  parser.py
navarra_edu_bot/storage/: db.py  models.py
navarra_edu_bot/telegram_bot/: callbacks.py  client.py  formatter.py
scripts/: capture_fixtures.py  test_fast_path_dry.py
tests/: conftest.py  test_apply_refactor.py  test_cli.py  test_config_loader.py  test_config_schema.py  test_diagnostics.py  test_fast_path_worker.py  test_filter_eligibility.py  test_filter_ranker.py  test_http_session.py  test_keychain.py  test_ntp_robust.py  test_ntp_sync.py  test_orchestrator.py  test_parser_extras.py  test_scraper_parser.py  test_storage.py  test_storage_events_kv.py  test_telegram_callbacks.py  test_telegram_client.py  test_telegram_formatter.py  test_thursday_queue.py
tests/fixtures/: elegir_ofertas_modal_loaded.html  login_page.html  offers_list.html  session_expired.html  solicitud_nueva.html  sso_login.html  (+1 more)
(+3 files in other folders)
